--- a/1-Qr-Code/index.html
+++ b/1-Qr-Code/index.html
@@ -10,24 +10,21 @@
 
     <title>Frontend Mentor | QR code component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
     <main>
       <section class="homepage">
         <div class="card">
-          <img src="" alt="" class="card-img" />
+          <div class="card-img"></div>
           <div class="card-content">
-            <h2 class="card-title">Improve your front-end skills by building projects</h2>
+            <h2 class="card-heading">Improve your front-end skills by building projects</h2>
             <p class="card-description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
           </div>
         </div>
       </section>
-      Improve your front-end skills by building projects
-    
-      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+
     </main>
 
-    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Sherief Elnahas</a>.</div>
+    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/SheriefElnahas/Front-End-Mentor" target="_blank">Sherief Elnahas</a>.</div>
   </body>
 </html>
