mobile first design

--- a/2-Workit-Landing-Page/index.html
+++ b/2-Workit-Landing-Page/index.html
@@ -21,10 +21,8 @@
           <h1 class="hero__heading">Data <span class="hero__heading--decorated">tailored</span> to your needs.</h1>
           <button class="btn btn-primary">Learn More</button>
         </div>
-
-
       </header>
-      
+
       <img src="./assets/images/image-hero.webp" alt="" class="header__img" />
       <section class="features">
         <div class="feature">
@@ -43,7 +41,30 @@
           <p class="feature_paragraph">Always affordable pricing that scales with your business. Get top-quality product data analytics services without hidden costs or unexpected fees.</p>
         </div>
       </section>
+
+      <section class="action">
+        <img class="action__img" src="./assets/images/image-founder.webp" alt="" />
+        <div class="action__box">
+          <h3 class="box__heading">Be the first to test</h3>
+          <p class="box__paragraph">Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a beta tester for our app and kickstart your company. Apply for access below and I’ll be in touch to schedule a call.</p>
+          <button class="btn btn-primary">Apply for access</button>
+        </div>
+      </section>
     </main>
-    <div>Learn more 1 2 . 3 Be the first to test Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a beta tester for our app and kickstart your company. Apply for access below and I’ll be in touch to schedule a call. Apply for access</div>
+
+    <footer class="footer">
+      <p class="footer__logo">Work<span>it</span></p>
+      <ul class="footer__links">
+        <li>
+          <a href="#" class="footer__link"><img src="./assets/images/icon-facebook.svg" alt="" /></a>
+        </li>
+        <li>
+          <a href="#" class="footer__link"><img src="./assets/images/icon-twitter.svg" alt="" /></a>
+        </li>
+        <li>
+          <a href="#" class="footer__link"><img src="./assets/images/icon-instagram.svg" alt="" /></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
