--- a/2-Results-Summary/index.html
+++ b/2-Results-Summary/index.html
@@ -3,33 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="style.css" />
+    <script src="app.js" defer></script>
     <title>Frontend Mentor | Results summary component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <main>
       <div class="card">
-        <div class="card__left"></div>
-        <div class="card__right"></div>
+        <div class="left__side">
+          <h3 class="card__left__heading-sub">Your Result</h3>
+          <p class="card__circle">
+            <span class="card__circle__result">76</span>
+            <span class="card__circle__percentage">of 100</span>
+          </p>
+
+          <h2 class="card__left__heading-main">Great</h2>
+          <p class="card__text">You scored higher than 65% of the people who have taken these tests</p>
+        </div>
+        <div class="right__side">
+          <h3 class="card__right__heading">Summary</h3>
+          <div class="type">
+            <div class="type__title">
+              <img class="type__img" src="./assets/images/icon-reaction.svg" class="type__icon" />
+              <h4 class="type__heading">Reaction</h4>
+            </div>
+
+            <p class="type__score">92 <span class="type__percent">/ 100</span></p>
+          </div>
+          <div class="type">
+            <div class="type__title">
+              <img class="type__img" src="./assets/images/icon-memory.svg" class="type__icon" />
+              <h4 class="type__heading">Memory</h4>
+            </div>
+
+            <p class="type__score">80 <span class="type__percent">/ 100</span></p>
+          </div>
+          <div class="type">
+            <div class="type__title">
+              <img class="type__img" src="./assets/images/icon-verbal.svg" class="type__icon" />
+              <h4 class="type__heading">Verbal</h4>
+            </div>
+
+            <p class="type__score">61 <span class="type__percent">/ 100</span></p>
+          </div>
+          <div class="type">
+            <div class="type__title">
+              <img class="type__img" src="./assets/images/icon-visual.svg" class="type__icon" />
+              <h4 class="type__heading">Visual</h4>
+            </div>
+
+            <p class="type__score">73 <span class="type__percent">/ 100</span></p>
+          </div>
+          <button class="card__btn">Continue</button>
+        </div>
       </div>
     </main>
-    Your Result 76 of 100 Great You scored higher than 65% of the people who have taken these tests. Summary Reaction 80 / 100 Memory 92 / 100 Verbal 61 / 100 Visual 72 / 100 Continue
-
-    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
   </body>
 </html>
