--- a/3-Product-Preview/index.html
+++ b/3-Product-Preview/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Practice Front End Web Development By Building Front End Master Projects" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
@@ -11,8 +12,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Preview Gabrielle Essence Eau De Parfum A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL. $149.99 $169.99 Add to Cart
+    <main>
+      <div class="card">
+        <div class="card__img"></div>
+        <div class="card__content">
+          <div class="card__container">
+            <h3 class="card__sub__heading">Perfume</h3>
+            <h1 class="card__main__heading">Gabrielle Essence Eau De Parfum</h1>
+            <p class="card__paragraph">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+            <div class="card__pricing">
+              <p class="card__price-current">$149.99</p>
+              <small class="card__price-old">$169.99</small>
+            </div>
+            <button class="card__btn"><img src="./images/icon-cart.svg" class="card__icon" alt="cart icon" /> Add to Cart</button>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- Preview Gabrielle Essence Eau De Parfum  $149.99 $169.99 Add to Cart -->
 
-    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
+    <!-- <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div> -->
   </body>
 </html>
