add alt attribute to images

--- a/2-Results-Summary/index.html
+++ b/2-Results-Summary/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="Front End Mentor Project 3 : Product Preview" >
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" >
+    <link rel="stylesheet" href="style.css" >
+
     <title>Frontend Mentor | Results summary component</title>
   </head>
   <body>
@@ -26,7 +27,7 @@
           <h3 class="card__right__heading">Summary</h3>
           <div class="type">
             <div class="type__title">
-              <img class="type__img" src="./assets/images/icon-reaction.svg" class="type__icon" />
+              <img class="type__img" src="./assets/images/icon-reaction.svg" alt="eletric icon"  >
               <h4 class="type__heading">Reaction</h4>
             </div>
 
@@ -34,7 +35,7 @@
           </div>
           <div class="type">
             <div class="type__title">
-              <img class="type__img" src="./assets/images/icon-memory.svg" class="type__icon" />
+              <img class="type__img" src="./assets/images/icon-memory.svg" alt="brain icon"  >
               <h4 class="type__heading">Memory</h4>
             </div>
 
@@ -42,7 +43,7 @@
           </div>
           <div class="type">
             <div class="type__title">
-              <img class="type__img" src="./assets/images/icon-verbal.svg" class="type__icon" />
+              <img class="type__img" src="./assets/images/icon-verbal.svg" alt=" text icon"   >
               <h4 class="type__heading">Verbal</h4>
             </div>
 
@@ -50,7 +51,7 @@
           </div>
           <div class="type">
             <div class="type__title">
-              <img class="type__img" src="./assets/images/icon-visual.svg" class="type__icon" />
+              <img class="type__img" src="./assets/images/icon-visual.svg" alt="eye icon"  >
               <h4 class="type__heading">Visual</h4>
             </div>
 
