add role and aria label to the background image

--- a/3-Product-Preview/index.html
+++ b/3-Product-Preview/index.html
@@ -14,7 +14,7 @@
   <body>
     <main>
       <div class="card">
-        <div class="card__img"></div>
+        <div class="card__img" role="img" aria-label="Perfume photo between tree leafs"></div>></div>
         <div class="card__content">
           <div class="card__container">
             <h3 class="card__sub__heading">Perfume</h3>
