--- a/3-Product-Preview/index.html
+++ b/3-Product-Preview/index.html
@@ -14,7 +14,7 @@
   <body>
     <main>
       <div class="card">
-        <div class="card__img" role="img" aria-label="Perfume photo between tree leafs"></div>></div>
+        <div class="card__img" role="img" aria-label="Perfume photo between tree leafs"></div>
         <div class="card__content">
           <div class="card__container">
             <h3 class="card__sub__heading">Perfume</h3>
@@ -29,7 +29,7 @@
         </div>
       </div>
     </main>
-    <!-- Preview Gabrielle Essence Eau De Parfum  $149.99 $169.99 Add to Cart -->
+   
 
     <!-- <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div> -->
   </body>
