--- a/4-Interactive-Rating/index.html
+++ b/4-Interactive-Rating/index.html
@@ -12,18 +12,34 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main>
+      <article class="component">
+        <img src="./images/icon-star.svg" alt="decoration star image" class="component__img">
+        
+        <h1 class="component__heading">How did we do?</h1>
+        <p class="component__paragraph"> Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering</p>
+        <div class="component__rating">
+          <button class="component__rate">1</button>
+          <button class="component__rate">2</button>
+          <button class="component__rate">3</button>
+          <button class="component__rate selected">4</button>
+          <button class="component__rate">5</button>
+        </div>
+        <a class="component__btn">Submit</a>
+      </article>
+    </main>
     <!-- Rating state start -->
 
-    How did we do? Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering! 1 2 3 4 5 Submit
+    <!-- Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering! 1 2 3 4 5 Submit -->
 
     <!-- Rating state end -->
 
     <!-- Thank you state start -->
 
-    You selected
+    <!-- You selected -->
     <!-- Add rating here -->
-    out of 5 Thank you! We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!
-
+    <!-- out of 5 Thank you! We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!
+  -->
     <!-- Thank you state end -->
 
     <!-- <div class="attribution">
