finish design system

--- a/6-E-Learning-Landing-Page/index.html
+++ b/6-E-Learning-Landing-Page/index.html
@@ -6,12 +6,12 @@
   <meta name="description" content="Front End Mentor Project 6 : Skilled E-Learning Landing Page" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
 
-  Get Started
+  <!-- Get Started
 
   Maximize skill, minimize budget
 
@@ -47,7 +47,9 @@
   without outside investment.
   Get Started
 
-  Get Started
-
+  Get Started -->
+    <button class="btn btn--dark">Get Started</button>
+    <button class="btn btn--orange">Get Started</button>
+    <button class="btn btn--purple">Get Started</button>
 </body>
 </html>
