--- a/6-E-Learning-Landing-Page/index.html
+++ b/6-E-Learning-Landing-Page/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Front End Mentor Project 6 : Skilled E-Learning Landing Page" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Front End Mentor Project 6 : Skilled E-Learning Landing Page" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | Skilled e-learning landing page</title>
-</head>
-<body>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Skilled e-learning landing page</title>
+  </head>
+  <body>
+    <main>
+      <navbar class="navbar">
+        <h3 class="navbar__logo">skilled</h3>
+        <button class="btn btn--dark">Get Started</button>
+      </navbar>
 
-  <!-- Get Started
+      <section class="hero">
+        <div class="hero__right">
+          <h1 class="hero__heading">Maximize skill, minimize budget</h1>
+          <p class="hero__paragraph">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
+          <button class="btn btn--orange">Get Started</button>
+        </div>
+ 
+        <div class="hero__left">
+          <img src="./images/image-hero-desktop.webp" alt="" class="hero__img">
+        </div>
+      </section>
+    </main>
+    <!-- Get Started
 
-  Maximize skill, minimize budget
 
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
+
 
   Get Started
 
@@ -48,8 +63,8 @@
   Get Started
 
   Get Started -->
-    <button class="btn btn--dark">Get Started</button>
+    <!-- <button class="btn btn--dark">Get Started</button>
     <button class="btn btn--orange">Get Started</button>
-    <button class="btn btn--purple">Get Started</button>
-</body>
+    <button class="btn btn--purple">Get Started</button> -->
+  </body>
 </html>
