--- a/6-E-Learning-Landing-Page/index.html
+++ b/6-E-Learning-Landing-Page/index.html
@@ -10,61 +10,74 @@
     <title>Frontend Mentor | Skilled e-learning landing page</title>
   </head>
   <body>
-    <main>
+    <header>
       <navbar class="navbar">
         <h3 class="navbar__logo">skilled</h3>
         <button class="btn btn--dark">Get Started</button>
       </navbar>
+    </header>
 
+    <main>
       <section class="hero">
-        <div class="hero__right">
-          <h1 class="hero__heading">Maximize skill, minimize budget</h1>
-          <p class="hero__paragraph">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
-          <button class="btn btn--orange">Get Started</button>
+        <div class="container container--hero">
+          <div class="hero__left">
+            <h1 class="hero__heading">Maximize skill, minimize budget</h1>
+            <p class="hero__paragraph">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
+            <button class="btn btn--orange">Get Started</button>
+          </div>
+
+          <div class="hero__right">
+            <img src="./images/image-hero-desktop.webp" alt="woman drinking coffee, memers banner 29k, course hours 1,451" class="hero__img" />
+          </div>
         </div>
- 
-        <div class="hero__left">
-          <img src="./images/image-hero-desktop.webp" alt="" class="hero__img">
+      </section>
+
+      <section class="features">
+        <div class="container">
+          <div class="features__cards">
+            <div class="card card--highlight">
+              <h3>Check out our most popular courses!</h3>
+            </div>
+            <div class="card">
+              <img src="./images/icon-animation.svg" alt="running icon" class="card__icon" />
+              <h4 class="card__heading">Animation</h4>
+              <p class="card__paragraph">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+              <a href="#" class="card__link">Get Started</a>
+            </div>
+
+            <div class="card">
+              <img src="./images/icon-design.svg" alt="photo icon" class="card__icon" />
+              <h4 class="card__heading">Design</h4>
+              <p class="card__paragraph">Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
+              <a href="#" class="card__link">Get Started</a>
+            </div>
+            <div class="card">
+              <img src="./images/icon-photography.svg" alt="camera icon" class="card__icon" />
+              <h4 class="card__heading">Photography</h4>
+              <p class="card__paragraph">Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
+              <a href="#" class="card__link">Get Started</a>
+            </div>
+            <div class="card">
+              <img src="./images/icon-crypto.svg" alt="crypto icon" class="card__icon" />
+              <h4 class="card__heading">Crypto</h4>
+              <p class="card__paragraph">All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
+              <a href="#" class="card__link">Get Started</a>
+            </div>
+            <div class="card">
+              <img src="./images/icon-business.svg" alt="handbag icon" class="card__icon" />
+              <h4 class="card__heading">Business</h4>
+              <p class="card__paragraph">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
+              <a href="#" class="card__link">Get Started</a>
+            </div>
+            <!-- <div class="card">
+            <img src="./images/icon-animation.svg" alt="" class="card__icon" />
+            <h4 class="card__heading">Animation</h4>
+            <p class="card__paragraph">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+            <a href="#" class="card__link">Get Started</a>
+          </div> -->
+          </div>
         </div>
       </section>
     </main>
-    <!-- Get Started
-
-
-
-
-  Get Started
-
-  Check out our most popular courses!
-
-  Animation
-  Learn the latest animation techniques to create stunning motion 
-  design and captivate your audience.
-  Get Started
-
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
-  how the web looks.
-  Get Started
-
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
-  to capture exceptional photos.
-  Get Started
-
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
-  to advanced with this 54 hour course.
-  Get Started
-
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
-  without outside investment.
-  Get Started
-
-  Get Started -->
-    <!-- <button class="btn btn--dark">Get Started</button>
-    <button class="btn btn--orange">Get Started</button>
-    <button class="btn btn--purple">Get Started</button> -->
   </body>
 </html>
