--- a/6-E-Learning-Landing-Page/index.html
+++ b/6-E-Learning-Landing-Page/index.html
@@ -12,8 +12,11 @@
   <body>
     <header>
       <navbar class="navbar">
-        <h3 class="navbar__logo">skilled</h3>
-        <button class="btn btn--dark">Get Started</button>
+        <div class="container container--navbar">
+          <h3 class="navbar__logo">skilled</h3>
+          <button class="btn btn--dark">Get Started</button>
+        </div>
+
       </navbar>
     </header>
 
@@ -27,7 +30,7 @@
           </div>
 
           <div class="hero__right">
-            <img src="./images/image-hero-desktop.webp" alt="woman drinking coffee, memers banner 29k, course hours 1,451" class="hero__img" />
+            <img src="./images/image-hero-desktop@2x.webp" alt="woman drinking coffee, memers banner 29k, course hours 1,451" class="hero__img" />
           </div>
         </div>
       </section>
@@ -69,15 +72,16 @@
               <p class="card__paragraph">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
               <a href="#" class="card__link">Get Started</a>
             </div>
-            <!-- <div class="card">
-            <img src="./images/icon-animation.svg" alt="" class="card__icon" />
-            <h4 class="card__heading">Animation</h4>
-            <p class="card__paragraph">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
-            <a href="#" class="card__link">Get Started</a>
-          </div> -->
           </div>
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container container--footer">
+        <h3 class="footer__heading">skilled</h3>
+        <button class="btn btn--purple">Get Started</button>
+      </div>
+    </footer>
   </body>
 </html>
