add responsive styles for mobiel screen

--- a/6-Equalizer/index.html
+++ b/6-Equalizer/index.html
@@ -16,19 +16,23 @@
     <main>
       <header class="header">
         <img src="assets/bg-main-desktop.png" alt="" class="header__bg" />
+        <img src="assets/bg-main-mobile.png" class="header__pattern--mobile" alt="">
         <div class="container">
           <img class="header__logo" src="assets/logo.svg" alt="logo image by the name of equalizer" />
+
           <div class="header__content">
             <h1 class="header__heading">We make your music sound extraordinary.</h1>
             <p class="header__paragraph">A system audio equalizer specifically designed for Android and iOS. Freely tune the way your music sounds with a professional grade parametric EQ & volume mixer. Control bass, mids, treble, gain control, reverb, and more!</p>
           </div>
         </div>
         <img class="header__pattern" src="assets/bg-pattern-1.svg" alt="background pattern image for decoration" />
+
       </header>
 
       <section class="payment">
         <img src="./assets/illustration-app.png" alt="" class="payment__img" />
         <img src="./assets/bg-pattern-2.svg" class="payment__pattern" alt="" />
+
         <article class="card">
           <h2 class="card__heading">Premium EQ</h2>
           <p class="card__paragraph">Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take your listening experience to a whole new level and access all our incredible features!</p>
