finish small screen responsive design

--- a/7-order-summary/index.html
+++ b/7-order-summary/index.html
@@ -16,20 +16,30 @@
 <body>
   <main>
     <article class="card">
-      <img src="images/illustration-hero.svg" alt="" class="card__image">
-      <h1 class="card__heading"> Order Summary</h1>
-      <p class="card__paragraph"> You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
-      </p>
-      <div class="card__plan">
-        <img src="" alt="" class="plan__icon">
-        <h2 class="plan__heading"> Annual Plan</h2>
-        <p class="plan__price"> $59.99/year</p>
-        <a href="#" class="plan__link">Change</a>
+      <img src="images/pattern-background-mobile.svg" alt="" class="pattern__mobile">
+      <img src="images/illustration-hero.svg" alt="" class="card__img">
+      <div class="card__content">
+        <h1 class="card__heading"> Order Summary</h1>
+        <p class="card__paragraph"> You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+        </p>
+        <div class="card__plan">
+          <img src="images/icon-music.svg" alt="" class="plan__icon">
+          <div class="plan__details">
+            <h2 class="plan__heading"> Annual Plan</h2>
+            <p class="plan__price"> $59.99/year</p>
+          </div>
+   
+          <a href="#" class="plan__link">Change</a>
 
+        </div>
+        <div class="buttons__container">
+          <button class="btn btn--payment"> Proceed to Payment</button>
+          <button class="btn btn--cancel">Cancel Order</button>
+        </div>
+       
       </div>
-      <button class="btn btn--payment"> Proceed to Payment</button>
-      <button class="btn btn--cancel">Cancel Order</button>
+
     </article>
   </main>
 
