--- a/7-order-summary/index.html
+++ b/7-order-summary/index.html
@@ -15,8 +15,10 @@
 
 <body>
   <main>
+    <img src="images/pattern-background-desktop.svg" alt="" class="pattern__desktop">
     <article class="card">
       <img src="images/pattern-background-mobile.svg" alt="" class="pattern__mobile">
+
       <img src="images/illustration-hero.svg" alt="" class="card__img">
       <div class="card__content">
         <h1 class="card__heading"> Order Summary</h1>
