--- a/7-order-summary/index.html
+++ b/7-order-summary/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Front End Mentor Project 7 : Order Summary" />
 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -15,18 +16,18 @@
 
 <body>
   <main>
-    <img src="images/pattern-background-desktop.svg" alt="" class="pattern__desktop">
+    <img src="images/pattern-background-desktop.svg" width="1440" height="437" alt="" class="pattern__desktop">
+    <img src="images/pattern-background-mobile.svg" alt="" class="pattern__mobile" width="375" height="194">
     <article class="card">
-      <img src="images/pattern-background-mobile.svg" alt="" class="pattern__mobile">
 
-      <img src="images/illustration-hero.svg" alt="" class="card__img">
+      <img src="images/illustration-hero.svg" alt="illustration girl dancing while listening to music on her phone" class="card__img">
       <div class="card__content">
         <h1 class="card__heading"> Order Summary</h1>
         <p class="card__paragraph"> You can now listen to millions of songs, audiobooks, and podcasts on any
           device anywhere you like!
         </p>
         <div class="card__plan">
-          <img src="images/icon-music.svg" alt="" class="plan__icon">
+          <img src="images/icon-music.svg" width="48" height="48" alt="" class="plan__icon">
           <div class="plan__details">
             <h2 class="plan__heading"> Annual Plan</h2>
             <p class="plan__price"> $59.99/year</p>
