--- a/9-meet-landing-page/index.html
+++ b/9-meet-landing-page/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Front End Mentor Project 9 : Meet Landing Page" />
+    <meta name="description" content="Front End Mentor Project 9 : Meet Landing Page" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
-  <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+    <link rel="stylesheet" href="style.css" />
 
-  <title>Frontend Mentor | Meet Landing Page</title>
-</head>
-<body>
+    <title>Frontend Mentor | Meet Landing Page</title>
+  </head>
+  <body>
 
-  <!-- Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+    <!-- <button class="btn btn-1">Download <span class="btn-highlight">v1.3.4.1</span></button>
+    <button class="btn btn-2">Download <span class="btn-highlight">v1.3.4.1</span></button> -->
+    <!-- Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
 
   Download v1.3
   What is it?
@@ -31,5 +33,5 @@
   Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
 
   Download v1.3 -->
-</body>
+  </body>
 </html>
