--- a/9-meet-landing-page/index.html
+++ b/9-meet-landing-page/index.html
@@ -12,10 +12,21 @@
     <title>Frontend Mentor | Meet Landing Page</title>
   </head>
   <body>
-
+    <main>
+      <header class="header">
+        <img class="header__logo" src="assets/logo.svg" alt="" />
+        <img src="assets/desktop/image-hero-left.png" alt="" class="header__img img--left" />
+        <img src="assets/desktop/image-hero-right.png" alt="" class="header__img img--right" />
+        <h1 class="header__title">Group Chat for Everyone</h1>
+        <p class="header__text">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+        <button class="btn btn-1">Download v1.3</button>
+        <button class="btn btn-2">What is it?</button>
+      </header>
+    </main>
     <!-- <button class="btn btn-1">Download <span class="btn-highlight">v1.3.4.1</span></button>
     <button class="btn btn-2">Download <span class="btn-highlight">v1.3.4.1</span></button> -->
-    <!-- Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+
+    <!-- 
 
   Download v1.3
   What is it?
