--- a/9-meet-landing-page/index.html
+++ b/9-meet-landing-page/index.html
@@ -15,11 +15,15 @@
     <main>
       <header class="header">
         <img class="header__logo" src="assets/logo.svg" alt="" />
-        <img src="assets/desktop/image-hero-left.png" alt="" class="header__img img--left" />
-        <img src="assets/desktop/image-hero-right.png" alt="" class="header__img img--right" />
+        <div class="image__container">
+          <img src="assets/tablet/image-hero.png" alt="" class="header__img img--tablet">
+          <img src="assets/desktop/image-hero-left.png" alt="" class="header__img img--left img--desktop" />
+          <img src="assets/desktop/image-hero-right.png" alt="" class="header__img img--right img--desktop" /> 
+        </div>
+
         <h1 class="header__title">Group Chat for Everyone</h1>
         <p class="header__text">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-        <button class="btn btn-1">Download v1.3</button>
+        <button class="btn btn-1">Download <span class="btn-highlight">v1.3</span> </button>
         <button class="btn btn-2">What is it?</button>
       </header>
     </main>
