--- a/9-meet-landing-page/index.html
+++ b/9-meet-landing-page/index.html
@@ -16,37 +16,34 @@
       <header class="header">
         <img class="header__logo" src="assets/logo.svg" alt="" />
         <div class="image__container">
-          <img src="assets/tablet/image-hero.png" alt="" class="header__img img--tablet">
+          <img src="assets/tablet/image-hero.png" alt="" class="header__img img--tablet" />
           <img src="assets/desktop/image-hero-left.png" alt="" class="header__img img--left img--desktop" />
-          <img src="assets/desktop/image-hero-right.png" alt="" class="header__img img--right img--desktop" /> 
+          <img src="assets/desktop/image-hero-right.png" alt="" class="header__img img--right img--desktop" />
         </div>
 
         <h1 class="header__title">Group Chat for Everyone</h1>
         <p class="header__text">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-        <button class="btn btn-1">Download <span class="btn-highlight">v1.3</span> </button>
+        <button class="btn btn-1">Download <span class="btn-highlight">v1.3</span></button>
         <button class="btn btn-2">What is it?</button>
       </header>
+
+      <div class="number__divider"><span class="number">01</span></div>
+
+      <section class="meeting">
+        <div class="meeting__container">
+          <img src="assets/desktop/image-woman-in-videocall.jpg" alt="" class="meeting__img" />
+          <img src="assets/desktop/image-women-videochatting.jpg" alt="" class="meeting__img" />
+
+          <img src="assets/desktop/image-men-in-meeting.jpg" alt="" class="meeting__img" />
+          <img src="assets/desktop/image-man-texting.jpg" alt="" class="meeting__img" />
+        </div>
+
+        <h3 class="meeting__overline overline">Built for modern use</h3>
+        <h2 class="meeting__heading">Smarter meetings, all in one place</h2>
+        <p class="meeting__text">Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+      </section>
     </main>
-    <!-- <button class="btn btn-1">Download <span class="btn-highlight">v1.3.4.1</span></button>
-    <button class="btn btn-2">Download <span class="btn-highlight">v1.3.4.1</span></button> -->
 
-    <!-- 
-
-  Download v1.3
-  What is it?
-
-  01
-  Built for modern use
-
-  Smarter meetings, all in one place
-
-  Send messages, share files, show your screen, and record your meetings — all in one 
-  workspace. Control who can join with invite-only team access, data encryption, and data export.
-
-  02
-  Experience more together
-  Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
-
-  Download v1.3 -->
+    <!-- 02 Experience more together Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions. Download v1.3  -->
   </body>
 </html>
