footer html and desktop style

--- a/9-meet-landing-page/index.html
+++ b/9-meet-landing-page/index.html
@@ -23,7 +23,7 @@
 
         <h1 class="header__title">Group Chat for Everyone</h1>
         <p class="header__text">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-        <button class="btn btn-1">Download <span class="btn-highlight">v1.3</span></button>
+        <button class="btn btn-1">Download <span class="btn--highlight">v1.3</span></button>
         <button class="btn btn-2">What is it?</button>
       </header>
 
@@ -44,6 +44,14 @@
       </section>
     </main>
 
-    <!-- 02 Experience more together Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions. Download v1.3  -->
+
+    <footer class="footer">
+
+      <h2 class="footer__heading">Experience more together</h2>
+        <p class="footer__text">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions</p>
+        <button class="btn btn-2">Download <span class="btn--highlight">v1.3</span></button>
+    </footer>
+
+    <!--  . Download   -->
   </body>
 </html>
