--- a/9-meet-landing-page/index.html
+++ b/9-meet-landing-page/index.html
@@ -45,6 +45,7 @@
     </main>
 
     <footer class="footer">
+      <div class="number__divider footer--divider"><span class="number">02</span></div>
       <h2 class="footer__heading">Experience more together</h2>
 
       <p class="footer__text">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions</p>
