--- a/9-meet-landing-page/index.html
+++ b/9-meet-landing-page/index.html
@@ -6,7 +6,7 @@
 
     <meta name="description" content="Front End Mentor Project 9 : Meet Landing Page" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.webp" />
     <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | Meet Landing Page</title>
@@ -14,11 +14,11 @@
   <body>
     <main>
       <header class="header">
-        <img class="header__logo" src="assets/logo.svg" alt="" />
+        <img class="header__logo" src="assets/logo.svg" alt="website logo with the name meet,and two colored dots behind it" />
         <div class="image__container">
-          <img src="assets/tablet/image-hero.png" alt="" class="header__img img--tablet" />
-          <img src="assets/desktop/image-hero-left.png" alt="" class="header__img img--left img--desktop" />
-          <img src="assets/desktop/image-hero-right.png" alt="" class="header__img img--right img--desktop" />
+          <img src="assets/tablet/image-hero.webp" alt="image of group of people, divided into small image for each person" class="header__img img--tablet" />
+          <img src="assets/desktop/image-hero-left.webp" alt="image of group of people, divided into small image for each person" class="header__img img--left img--desktop" />
+          <img src="assets/desktop/image-hero-right.webp" alt="image of group of people, divided into small image for each person" class="header__img img--right img--desktop" />
         </div>
 
         <h1 class="header__title">Group Chat for Everyone</h1>
@@ -31,14 +31,14 @@
 
       <section class="meeting">
         <div class="meeting__container">
-          <img src="assets/desktop/image-woman-in-videocall.jpg" alt="" class="meeting__img" />
-          <img src="assets/desktop/image-women-videochatting.jpg" alt="" class="meeting__img" />
+          <img src="assets/desktop/image-woman-in-videocall.webp" alt="woman in videocall" class="meeting__img" />
+          <img src="assets/desktop/image-women-videochatting.webp" alt="woman videochatting" class="meeting__img" />
 
-          <img src="assets/desktop/image-men-in-meeting.jpg" alt="" class="meeting__img" />
-          <img src="assets/desktop/image-man-texting.jpg" alt="" class="meeting__img" />
+          <img src="assets/desktop/image-men-in-meeting.webp" alt="men in meeting" class="meeting__img" />
+          <img src="assets/desktop/image-man-texting.webp" alt="max texting" class="meeting__img" />
         </div>
 
-        <h3 class="meeting__overline overline">Built for modern use</h3>
+        <p class="meeting__overline overline">Built for modern use</p>
         <h2 class="meeting__heading">Smarter meetings, all in one place</h2>
         <p class="meeting__text">Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
       </section>
@@ -51,7 +51,5 @@
       <p class="footer__text">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions</p>
       <button class="btn btn-2">Download <span class="btn--highlight">v1.3</span></button>
     </footer>
-
-    <!--  . Download   -->
   </body>
 </html>
