first card finished

--- a/10-column-preview-card/index.html
+++ b/10-column-preview-card/index.html
@@ -14,9 +14,30 @@
     </head>
   </head>
   <body>
+    <main>
+      <section class="cards">
+        <article class="card card--sedan" >
+          <img src="images/icon-sedans.svg" alt="a sedan car with a orange circle as a logo picture" class="card__img" />
+          <h2 class="card__heading">Sedans</h2>
+          <p class="card__text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+          <button class="card__btn btn--sedans">Learn More</button>
+        </article>
+        <article class="card">
+          <img src="images/icon-sedans.svg" alt="a sedan car with a orange circle as a logo picture" class="card__img" />
+          <h2 class="card__heading">Sedans</h2>
+          <p class="card__text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+          <button class="card__btn btn--sedans">Learn More</button>
+        </article>
+        <article class="card">
+          <img src="images/icon-sedans.svg" alt="a sedan car with a orange circle as a logo picture" class="card__img" />
+          <h2 class="card__heading">Sedans</h2>
+          <p class="card__text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+          <button class="card__btn btn--sedans">Learn More</button>
+        </article>
+      </section>
+    </main>
     <!-- Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+
 
   SUVs
   Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
