--- a/10-column-preview-card/index.html
+++ b/10-column-preview-card/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      <meta name="description" content="Front End Mentor Project 10 : Column Preview Card" />
+    <meta name="description" content="Front End Mentor Project 10 : Column Preview Card" />
 
-      <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.webp" />
-      <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.webp" />
+    <link rel="stylesheet" href="style.css" />
 
-      <title>Frontend Mentor | 3-column preview card component</title>
-    </head>
+    <title>Frontend Mentor | 3-column preview card component</title>
   </head>
+
   <body>
     <main>
       <section class="cards">
         <article class="card card--sedan">
-          <img src="images/icon-sedans.svg" alt="a sedan car with an orange circle as a logo picture" class="card__img" />
+          <img src="images/icon-sedans.svg" alt="a sedan car with an orange circle as a logo picture" class="card__img" width="64" height="40" />
           <h2 class="card__heading">Sedans</h2>
           <p class="card__text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
           <button class="card__btn btn--sedan">Learn More</button>
         </article>
         <article class="card card--suvs">
-          <img src="images/icon-suvs.svg" alt="a suvs car with a green circle as a logo picture" class="card__img" />
+          <img src="images/icon-suvs.svg" alt="a suvs car with a green circle as a logo picture" class="card__img" width="64" height="40" />
           <h2 class="card__heading">SUVS</h2>
           <p class="card__text">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
           <button class="card__btn btn--suvs">Learn More</button>
         </article>
         <article class="card card--luxury">
-          <img src="images/icon-sedans.svg" alt="a sedan car with a orange circle as a logo picture" class="card__img" />
+          <img src="images/icon-sedans.svg" alt="a sedan car with a orange circle as a logo picture" class="card__img" width="64" height="40" />
           <h2 class="card__heading">Sedans</h2>
           <p class="card__text">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
           <button class="card__btn btn--luxury">Learn More</button>
