--- a/10-column-preview-card/index.html
+++ b/10-column-preview-card/index.html
@@ -14,7 +14,9 @@
 
   <body>
     <main>
+
       <section class="cards">
+        <h1 class="sr-only">3 Column Cards</h1>
         <article class="card card--sedan">
           <img src="images/icon-sedans.svg" alt="a sedan car with an orange circle as a logo picture" class="card__img" width="64" height="40" />
           <h2 class="card__heading">Sedans</h2>
@@ -28,8 +30,8 @@
           <button class="card__btn btn--suvs">Learn More</button>
         </article>
         <article class="card card--luxury">
-          <img src="images/icon-sedans.svg" alt="a sedan car with a orange circle as a logo picture" class="card__img" width="64" height="40" />
-          <h2 class="card__heading">Sedans</h2>
+          <img src="images/icon-luxury.svg" alt="a sedan car with a orange circle as a logo picture" class="card__img" width="64" height="40" />
+          <h2 class="card__heading">Luxury</h2>
           <p class="card__text">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
           <button class="card__btn btn--luxury">Learn More</button>
         </article>
