add style guide and CSS variables

--- a/11-pod-request-access/index.html
+++ b/11-pod-request-access/index.html
@@ -6,12 +6,17 @@
 
     <meta name="description" content="Front End Mentor Project 11 : Pod Request Access Landing Page" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.webp" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
     <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | Pod request access landing page</title>
   </head>
   <body>
+    <!-- <form class="form">
+      <input type="text" placeholder="Email address" class="form__input" />
+      <button class="form__btn">Request Access</button>
+      <span class="form__error">Oops! Please check your email</span>
+    </form> -->
     <!-- Publish your podcasts everywhere. Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts and more! Request access -->
   </body>
 </html>
