finish desktop layout

--- a/11-pod-request-access/index.html
+++ b/11-pod-request-access/index.html
@@ -12,11 +12,33 @@
     <title>Frontend Mentor | Pod request access landing page</title>
   </head>
   <body>
+    <main class="hero">
+      <img src="assets/desktop/logo.svg" alt="" class="hero__logo" />
+      <img src="assets/desktop/image-host.jpg" alt="" class="hero__image" />
+      <img src="assets/desktop/bg-pattern-dots.svg" alt="" class="hero__pattern" />
+      <article class="hero__card">
+        <h1 class="card__heading"> <span class="card__heading--highlight">Publish your podcasts</span>  everywhere</h1>
+        <p class="card__text">Upload your audio to Pod with a single click. We'll then distribute your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
+        <form class="form">
+          <input type="text" placeholder="Email address" class="form__input" />
+          <button class="form__btn">Request Access</button>
+          <span class="form__error">Oops! Please check your email</span>
+        </form>
+        <div class="card__logos">
+          <img src="assets/desktop/spotify.svg" alt="" class="card__logo">
+          <img src="assets/desktop/apple-podcast.svg" alt="" class="card__logo">
+          <img src="assets/desktop/google-podcasts.svg" alt="" class="card__logo">
+          <img src="assets/desktop/pocket-casts.svg" alt="" class="card__logo">
+        </div>
+      </article>
+    </main>
+
+    <!-- .  Request access -->
+
     <!-- <form class="form">
       <input type="text" placeholder="Email address" class="form__input" />
       <button class="form__btn">Request Access</button>
       <span class="form__error">Oops! Please check your email</span>
     </form> -->
-    <!-- Publish your podcasts everywhere. Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts and more! Request access -->
   </body>
 </html>
