lighthouse - axe test - html validator

--- a/11-pod-request-access/index.html
+++ b/11-pod-request-access/index.html
@@ -14,10 +14,10 @@
   <body>
     <main class="hero">
       <img src="assets/desktop/logo.svg" alt="" class="hero__logo" />
-      <img src="assets/desktop/image-host.jpg" alt="" class="hero__image" />
-      <img src="assets/desktop/bg-pattern-dots.svg" alt="" class="hero__pattern" />
+      <img src="assets/desktop/image-host.webp" alt="singer wearing headphones and singing in the mic" class="hero__image" width="888" height="580" />
+      <img src="assets/desktop/bg-pattern-dots.svg" alt="" class="hero__pattern" role="none" />
       <article class="hero__card">
-        <h1 class="card__heading"> <span class="card__heading--highlight">Publish your podcasts</span>  everywhere</h1>
+        <h1 class="card__heading"><span class="card__heading--highlight">Publish your podcasts</span> everywhere</h1>
         <p class="card__text">Upload your audio to Pod with a single click. We'll then distribute your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
         <form class="form">
           <input type="text" placeholder="Email address" class="form__input" />
@@ -25,10 +25,10 @@
           <span class="form__error">Oops! Please check your email</span>
         </form>
         <div class="card__logos">
-          <img src="assets/desktop/spotify.svg" alt="" class="card__logo">
-          <img src="assets/desktop/apple-podcast.svg" alt="" class="card__logo">
-          <img src="assets/desktop/google-podcasts.svg" alt="" class="card__logo">
-          <img src="assets/desktop/pocket-casts.svg" alt="" class="card__logo">
+          <img src="assets/desktop/spotify.svg" alt="spotify company logo along with the company name" class="card__logo" with="96" height="29" />
+          <img src="assets/desktop/apple-podcast.svg" alt="apple poadcat logo" class="card__logo" width="78" height="29" />
+          <img src="assets/desktop/google-podcasts.svg" alt="Google podcast logo" class="card__logo" width="125" height="18" />
+          <img src="assets/desktop/pocket-casts.svg" alt="pocket casts logo" class="card__logo" width="129" height="26" />
         </div>
       </article>
     </main>
