--- a/11-pod-request-access/index.html
+++ b/11-pod-request-access/index.html
@@ -15,8 +15,8 @@
     <main class="hero">
       <img src="assets/desktop/logo.svg" alt="" class="hero__logo" />
       <picture>
-        <source media="(max-width: 1050px)" srcset="./assets/tablet/image-host.jpg" class="hero__image--tablet" />
-        <source media="(max-width: 700px)" srcset="./assets/mobile/image-host.jpg" class="hero__image" />
+        <source media="(max-width: 1050px)" srcset="./assets/tablet/image-host.webp" class="hero__image--tablet" />
+        <source media="(max-width: 700px)" srcset="./assets/mobile/image-host.webp" class="hero__image" />
         <img src="assets/desktop/image-host.webp" alt="singer wearing headphones and singing in the mic" class="hero__image" width="888" height="580" />
       </picture>
 
