--- a/11-pod-request-access/index.html
+++ b/11-pod-request-access/index.html
@@ -26,7 +26,7 @@
         <h1 class="card__heading"><span class="card__heading--highlight">Publish your podcasts</span> everywhere</h1>
         <p class="card__text">Upload your audio to Pod with a single click. We'll then distribute your podcast to Spotify, Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
         <form class="form">
-          <input type="text" placeholder="Email address" class="form__input" />
+          <input type="email" placeholder="Email address" class="form__input" />
           <button class="form__btn">Request Access</button>
           <span class="form__error">Oops! Please check your email</span>
         </form>
@@ -39,12 +39,6 @@
       </article>
     </main>
 
-    <!-- .  Request access -->
-
-    <!-- <form class="form">
-      <input type="text" placeholder="Email address" class="form__input" />
-      <button class="form__btn">Request Access</button>
-      <span class="form__error">Oops! Please check your email</span>
-    </form> -->
+    <script src="app.js"></script>
   </body>
 </html>
