--- a/12-profile-card/index.html
+++ b/12-profile-card/index.html
@@ -15,7 +15,36 @@
 
 </head>
 <body>
-  <!-- Victor Crest
+  <main class="hero">
+    <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--top">
+    <article class="hero__card">
+      
+      <img src="images/image-victor.jpg" alt="" class="hero__img">
+      <div class="card__content">
+        <h2 class="card__heading">Victor Crest</h2>
+        <p class="card__age">26</p>
+      </div>
+      <p class="card__country">London</p>
+      <div class="card__info">
+        <div class="card__column">
+          <h3 class="column__number">80k</h3>
+          <h3 class="column__detail">Followers</h3>
+        </div>
+        <div class="card__column">
+          <h3 class="column__number">80k</h3>
+          <h3 class="column__detail">Followers</h3>
+        </div>
+        <div class="card__column">
+          <h3 class="column__number">80k</h3>
+          <h3 class="column__detail">Followers</h3>
+        </div>
+      </div>
+
+
+    </article>
+    <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--bottom">
+  </main>
+  <!-- 
   26
   London
 
