--- a/12-profile-card/index.html
+++ b/12-profile-card/index.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <meta name="description" content="Front End Mentor Project 12 : Profile Card" />
+  <meta name="description" content="Front End Mentor Project 12 : Profile Card" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-    <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  
+  <title>Frontend Mentor | Profile card component</title>
 
-    <title>Frontend Mentor | Profile card component</title>
-  </head>
-  <body>
-    <main class="hero">
-      <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--top" />
-      <article class="hero__card">
-        <img src="images/bg-pattern-card.svg" alt="" class="card__background" />
-        <img src="images/image-victor.jpg" alt="" class="card__img" />
-        <div class="card__content">
-          <h2 class="card__heading">Victor Crest</h2>
-          <p class="card__age">26</p>
+
+</head>
+<body>
+  <main class="hero">
+    <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--top">
+    <article class="hero__card">
+      
+      <img src="images/image-victor.jpg" alt="" class="hero__img">
+      <div class="card__content">
+        <h2 class="card__heading">Victor Crest</h2>
+        <p class="card__age">26</p>
+      </div>
+      <p class="card__country">London</p>
+      <div class="card__info">
+        <div class="card__column">
+          <h3 class="column__number">80k</h3>
+          <h3 class="column__detail">Followers</h3>
         </div>
-        <p class="card__country">London</p>
-        <div class="card__info">
-          <div class="card__column">
-            <h3 class="column__number">80k</h3>
-            <h3 class="column__detail">Followers</h3>
-          </div>
-          <div class="card__column">
-            <h3 class="column__number">80k</h3>
-            <h3 class="column__detail">Followers</h3>
-          </div>
-          <div class="card__column">
-            <h3 class="column__number">80k</h3>
-            <h3 class="column__detail">Followers</h3>
-          </div>
+        <div class="card__column">
+          <h3 class="column__number">80k</h3>
+          <h3 class="column__detail">Followers</h3>
         </div>
-      </article>
-      <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--bottom" />
-    </main>
-    <!-- 
+        <div class="card__column">
+          <h3 class="column__number">80k</h3>
+          <h3 class="column__detail">Followers</h3>
+        </div>
+      </div>
+
+
+    </article>
+    <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--bottom">
+  </main>
+  <!-- 
   26
   London
 
@@ -57,5 +60,5 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-  </body>
+</body>
 </html>
