--- a/12-profile-card/index.html
+++ b/12-profile-card/index.html
@@ -30,32 +30,16 @@
             <h3 class="column__detail">Followers</h3>
           </div>
           <div class="card__column">
-            <h3 class="column__number">80k</h3>
-            <h3 class="column__detail">Followers</h3>
+            <h3 class="column__number">803k</h3>
+            <h3 class="column__detail">Likes</h3>
           </div>
           <div class="card__column">
-            <h3 class="column__number">80k</h3>
-            <h3 class="column__detail">Followers</h3>
+            <h3 class="column__number">1.4k</h3>
+            <h3 class="column__detail">Photos</h3>
           </div>
         </div>
       </article>
-      <img src="images/bg-pattern-top.svg" class="hero__pattern pattern--bottom" />
+      <img src="images/bg-pattern-bottom.svg" class="hero__pattern pattern--bottom" />
     </main>
-    <!-- 
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
   </body>
 </html>
